--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,6 @@
 // 다른 scss 파일에서 활용할 변수들을 관리하는 페이지
-$backGroundColor: #ffffff;
+$mainBorder: 1px solid #d8d8d8;
+
+$backColor: #ffffff;
+
+$btnColor: #0995f6;
