--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -1,16 +1,9 @@
 
 @import 'https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;500;700&family=Lobster&display=swap';
 
-* {
-    box-sizing: border-box;
-  }
-  
-  img {
-    height: 25px;
-  }
-  
 
-nav {
+
+.nav {
     width: 100%;
     height: 54px;
     position: fixed;
@@ -19,53 +12,56 @@ nav {
     border-bottom: 1px solid #dbdbdb;
     background-color: white;
 
-    .logoBrand {
-      font-family: "Lobster", cursive;
-      font-size: 25px;
-    }
-  
     .navContainer {
-      max-width: 930px;
-      padding: 0 20px;
-      display: flex;
-      align-items: center;
-    }
+        max-width: 930px;
+        padding: 0 20px;
+        display: flex;
+        align-items: center;
+        
+        .navLogo,
+        .navSearchBox,
+        .navIcon {
+            width: 370px;
+            display: flex;
+            align-items: center;
 
-    .navLogo,
-    .navSearchBox,
-    .navIcon {
-      width: 370px;
-      display: flex;
-      align-items: center;
-    }
+            img {
+                height: 25px;
+            }
 
-    .navIcon {
-      justify-content: flex-end;
-    }
-
-
-    .navIcon img {
-      padding: 0 20px;
-    }
+            .vl {
+                height: 22px;
+                margin: 0 10px;
+                border-left: 1px solid #262626;
+            }
     
-    .vl {
-      height: 22px;
-      margin: 0 10px;
-      border-left: 1px solid #262626;
+            .logoBrand {
+                font-family: "Lobster", cursive;
+                font-size: 25px;
+            }
+        }
+
+        .navSearchBox input {
+            width: 200px;
+            height: 12px;
+            padding: 7px;
+            box-sizing: content-box;
+            background-color: #fafafa;
+            border-radius: 10px;
+            background-size: 14px;
+            background-repeat: no-repeat;
+            background-position: 40% center;
+            text-align: center;
+            font-size: 12px;
+            border: 0.3px solid gray;
+        }
+
+        .navIcon {
+            justify-content: flex-end;
+
+            img {
+                padding: 0 20px;
+            }
+        }
     }
-    
-    .navSearchBox input {
-      width: 200px;
-      height: 12px;
-      padding: 7px;
-      box-sizing: content-box;
-      background-color: #fafafa;
-      border-radius: 10px;
-      background-size: 14px;
-      background-repeat: no-repeat;
-      background-position: 40% center;
-      text-align: center;
-      font-size: 12px;
-      border: 0.3px solid gray;
-    }
-  }
+}
