--- a/src/pages/dayeonmun/Login/Login.scss
+++ b/src/pages/dayeonmun/Login/Login.scss
@@ -54,7 +54,18 @@
                     margin-bottom: 15px;
                 }
 
-                .btn {
+                .activeBtn {
+                    width: 100%;
+                    height: 50px;
+                    background-color: #0095f6;
+                    border: 1px solid;
+                    border-radius: 5px;
+                    font-size: 15px;
+                    color: white;
+                    margin-top: 15px;
+                }
+
+                .unActiveBtn {
                     width: 100%;
                     height: 50px;
                     background-color: #c8e0fc;
