--- a/src/pages/dayeonmun/Main/Main.scss
+++ b/src/pages/dayeonmun/Main/Main.scss
@@ -1,368 +1,258 @@
-* {
-    box-sizing: border-box;
-}
+main {
+    display: flex;
+    justify-content: center;
 
-body {
-    background-color: #fafafa;
-    // padding-top: 50px;
-
-    /* 상단 nav */
-    .navbar {
-        display: flex;
-        justify-content: space-around;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        align-items: center;
-        width: auto;
-        height: 80px;
-        background-color: white;
-    }
-
-    .topLogo {
-        display: flex;
-        justify-content: center;
-    }
-
-    .topLogo img {
-        height: 40px;
-        padding-right: 30px;
-        border-right: 3px solid black;
-    }
-
-    .navbar span {
-        font-size: 30px;
-        font-family: Lobster;
-        margin-left: 20px;
-    }
-
-    .search input {
-        width: 250px;
-        height: 35px;
-        font-size: 15px;
-        text-align: center;
-        border-radius: 5px;
-        border: 1px solid #dcdcdc;
-        outline: none;
-        background-color: #fafafa;
-        background-size: 20px;
-        background-repeat: no-repeat;
-        background-position: 35%;
-    }
-
-    .topIcon img {
-        width: 35px;
-        margin-right: 25px;
-    }
-
-    /* 전체 메인페이지 */
-    main {
-        display: flex;
-    }
-
-    /* 게시글 피드 */
     .feeds {
-        width: auto;
         height: auto;
-        margin-top: 60px;
+        margin-top: 70px;
+        margin-bottom: 20px;
         border: 1px solid #dcdcdc;
         border-radius: 15px;
         background-color: white;
+
+        header {
+            display: flex;
+            align-items: center;
+            height: 60px;
+
+            .profilePhoto {
+                width: 40px;
+                border-radius: 50%;
+                margin: 10px 10px;
+            }
+            span {
+                font-size: 13px;
+                font-weight: bold;
+            }
+            .morePhoto {
+                height: 20px;
+                align-items: center;
+                margin: auto;
+                margin-right: 20px;
+            }
+        }
+        .feedPhoto {
+            width: 400px;
+        }
+        .icon img {
+            width: 25px;
+            margin-left: 10px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        .saveicon {
+            float: right;
+            margin-right: 10px;
+        }
+        .like {
+            display: flex;
+            align-items: center;
+            img {
+                width: 30px;
+                border-radius: 50%;
+                margin-left: 10px;
+            }
+            span {
+                font-size: 12px;
+                vertical-align: 15px;
+                margin-left: 5px;
+            }
+        }
+
+        .comment ul {
+            font-size: 15px;
+            list-style: none;
+            padding-left: 20px;
+            margin: 5px 0px;
+        }
+        .ago {
+            font-size: 10px;
+            color: #828282;
+            padding-top: 8px;
+            padding-bottom: 8px;
+            margin-left: 20px;
+        }
+        .commentList {
+            display: flex;
+            justify-content: space-between;
+            width: auto;
+            height: auto;
+            border-top: 1px solid #dcdcdc;
+            input {
+                width: 300px;
+                height: 40px;
+                outline: none;
+                border: none;
+                padding-left: 20px;
+                background: transparent;
+            }
+            button {
+                color: #aac9ff;
+                font-weight: bold;
+                border: none;
+                margin-right: 20px;
+                background-color: white;
+            }
+        }
     }
 
-    header {
-        display: flex;
-        justify-content: space-between;
-        height: 65px;
-    }
-
-    header .profilePhoto {
-        width: 45px;
-        border-radius: 50%;
-        margin: 10px 10px;
-    }
-
-    header span {
-        font-size: 15px;
-        font-weight: bold;
-        margin-top: 30px;
-    }
-
-    .morePhoto {
-        height: 30px;
-        align-items: center;
-        margin: auto 20px;
-    }
-
-    .feedPhoto {
-        width: 500px;
-    }
-
-    .icon img {
-        width: 45px;
-        margin-left: 15px;
-        margin-top: 10px;
-    }
-
-    .saveicon {
-        float: right;
-        margin-right: 10px;
-    }
-
-    .like img {
-        width: 45px;
-        border-radius: 50%;
-        margin-top: 15px;
-        margin-left: 15px;
-    }
-
-    .like span {
-        font-size: 20px;
-        vertical-align: 15px;
-        margin-left: 5px;
-    }
-
-    .feeds ul {
-        font-size: 20px;
-        list-style: none;
-        padding-left: 20px;
-        margin: 5px 0px;
-    }
-
-    .ago {
-        font-size: 13px;
-        color: #828282;
-        margin-left: 20px;
-    }
-
-    .comment {
-        width: auto;
-        height: auto;
-        border-top: 1px solid #dcdcdc;
-    }
-
-    .comment input {
-        width: auto;
-        height: 60px;
-        font-size: 20px;
-        outline: none;
-        border: none;
-        padding-left: 20px;
-        background: transparent;
-    }
-
-    .comment button {
-        color: #aac9ff;
-        font-size: 20px;
-        font-weight: bold;
-        border: none;
-        margin-right: 20px;
-        background-color: white;
-    }
-
-    /* 오른쪽피드 */
     .mainRight {
-        width: auto;
+        width: 300px;
         height: auto;
-        margin-left: 40px;
-        margin-top: 60px;
+        margin-left: 20px;
+        margin-top: 70px;
         border-radius: 15px;
-    }
 
-    /* 내 프로필 */
-    .rightProfile {
-        display: flex;
-        width: auto;
-    }
+        .rightProfile {
+            display: flex;
+            img {
+                width: 50px;
+                margin-left: 10px;
+                border-radius: 50%;
+            }
+            .myName {
+                margin-left: 10px;
+                margin: 10px 10px;
+                .myId {
+                    font-size: 15px;
+                    font-weight: bold;
+                }
+                .introduce {
+                    font-size: 13px;
+                }
+            }
+        }
 
-    .myProfile img {
-        width: 60px;
-        margin-left: 10px;
-        border-radius: 50%;
-    }
+        .story {
+            height: auto;
+            margin-top: 15px;
+            border: 1px solid #dcdcdc;
+            border-radius: 10px;
+            background-color: white;
 
-    .myName {
-        margin-left: 10px;
-        margin: 10px 10px;
-    }
+            .storyText {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 15px;
+                .storyTextLeft {
+                    font-size: 13px;
+                    font-weight: bold;
+                    color: #828282;
+                }
+                .storyTextRight {
+                    font-size: 13px;
+                    font-weight: bold;
+                }
+            }
 
-    .myId {
-        font-size: 20px;
-        font-weight: bold;
-    }
+            .storyFeed {
+                height: auto;
+                margin-left: 10px;
+                .storyList {
+                    display: flex;
+                    img {
+                        width: 50px;
+                        border: 2px solid;
+                        border-radius: 50%;
+                        padding: 3px;
+                        margin-bottom: 5px;
+                    }
+                    .storyName {
+                        margin: auto 5px;
+                        .storyId {
+                            font-size: 13px;
+                            font-weight: bold;
+                        }
+                        .storyAgo {
+                            font-size: 10px;
+                            color: #828282;
+                        }
+                    }
+                }
+            }
+        }
 
-    .introduce {
-        font-size: 13px;
-    }
+        .recommend {
+            height: auto;
+            margin-top: 15px;
+            border: 1px solid #dcdcdc;
+            border-radius: 10px;
+            background-color: white;
+            .recommendText {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 15px;
+                .recommendTextLeft {
+                    font-size: 13px;
+                    font-weight: bold;
+                    color: #828282;
+                }
+                .recommendTextRight {
+                    font-size: 13px;
+                    font-weight: bold;
+                }
+            }
 
-    /* 스토리피드 */
-    .story {
-        width: auto;
-        height: auto;
-        margin-top: 15px;
-        border: 1px solid #dcdcdc;
-        border-radius: 10px;
-        background-color: white;
-    }
+            .recommendFeed {
+                height: auto;
+                margin-left: 10px;
+                .recommendList {
+                    display: flex;
+                    align-items: center;
+                    .recommendPhoto {
+                        img {
+                            width: 50px;
+                            border: 2px solid;
+                            border-radius: 50%;
+                            padding: 3px;
+                            margin-bottom: 5px;
+                        }
+                    }
 
-    .storyText {
-        width: auto;
-        height: auto;
-        padding: 15px;
-    }
+                    .recommendName {
+                        margin: auto 5px;
+                        .recommendId {
+                            font-size: 13px;
+                            font-weight: bold;
+                        }
+                        .recommendInfo {
+                            font-size: 10px;
+                            color: #828282;
+                        }
+                    }
 
-    .storyTextLeft {
-        font-size: 15px;
-        font-weight: bold;
-        color: #828282;
-    }
-
-    .storyTextRight {
-        font-size: 15px;
-        font-weight: bold;
-        float: right;
-    }
-
-    .storyFeed {
-        width: auto;
-        height: 250px;
-        overflow-y: scroll;
-    }
-
-    .storyFeed::-webkit-scrollbar {
-        display: none;
-    }
-
-    .storyFeed img {
-        width: 60px;
-        border: 3px solid;
-        border-radius: 50%;
-        margin: 5px 10px;
-        padding: 3px;
-    }
-
-    .storyList {
-        display: flex;
-    }
-
-    .storyImage {
-        display: flex;
-        justify-content: center;
-    }
-
-    .storyName {
-        margin: auto 5px;
-    }
-
-    .storyId {
-        font-size: 15px;
-        font-weight: bold;
-    }
-
-    .storyAgo {
-        font-size: 12px;
-        color: #828282;
-    }
-
-    /* 추천피드 */
-    .recommend {
-        width: 500px;
-        height: 300px;
-        margin-top: 15px;
-        border: 1px solid #dcdcdc;
-        border-radius: 10px;
-        background-color: white;
-    }
-
-    .recommendText {
-        width: 500px;
-        height: 50px;
-        padding-top: 20px;
-    }
-
-    .recommendTextLeft {
-        font-size: 20px;
-        font-weight: bold;
-        color: #828282;
-        margin-left: 20px;
-    }
-
-    .recommendTextRight {
-        font-size: 20px;
-        font-weight: bold;
-        float: right;
-        margin-right: 20px;
-    }
-
-    .recommendFeed {
-        width: 500px;
-        height: 230px;
-        overflow-y: scroll;
-    }
-
-    .recommendFeed::-webkit-scrollbar {
-        display: none;
-    }
-
-    .recommendList {
-        display: flex;
-    }
-
-    .recommendFeed img {
-        width: 70px;
-        border-radius: 50%;
-        margin: 10px 10px;
-        padding: 3px;
-    }
-
-    .recommendName {
-        margin: auto 5px;
-    }
-
-    .recommendId {
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    .recommendInfo {
-        font-size: 18px;
-        color: #828282;
-    }
-
-    .recommendFollow {
-        margin-left: 20px;
-    }
-
-    .recommendList button {
-        display: block;
-        color: #0095f6;
-        font-size: 20px;
-        font-weight: bold;
-        border: none;
-        margin-top: 35px;
-        background-color: white;
-    }
-
-    /* 저작권영역 */
-    .copyright1 {
-        display: block;
-        color: #828282;
-        font-size: 18px;
-        margin-top: 25px;
-    }
-
-    .copyright2 {
-        display: block;
-        color: #828282;
-        font-size: 18px;
-        margin-top: 5px;
-    }
-
-    .copyright3 {
-        display: block;
-        color: #828282;
-        font-size: 18px;
-        margin-top: 25px;
+                    .recommendFollow {
+                        button {
+                            display: block;
+                            color: #0095f6;
+                            font-size: 13px;
+                            font-weight: bold;
+                            border: none;
+                            background-color: white;
+                        }
+                    }
+                }
+            }
+        }
+        .copyright1 {
+            display: block;
+            color: #828282;
+            font-size: 10px;
+            margin-top: 25px;
+        }
+        .copyright2 {
+            display: block;
+            color: #828282;
+            font-size: 10px;
+            margin-top: 5px;
+        }
+        .copyright3 {
+            display: block;
+            color: #828282;
+            font-size: 10px;
+            margin-top: 25px;
+        }
     }
 }
