Add: mission 3~4 - 댓글 기능 구현, 댓글 컴포넌트화, Props로 전달 기능 구현

--- a/src/pages/chaeyoungkim/Main/Main.scss
+++ b/src/pages/chaeyoungkim/Main/Main.scss
@@ -200,6 +200,11 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .commentItem {
+    display: flex;
+    justify-content: space-between;
+  }
   
   .inputComment {
     font-size: 14px;
