Add : 댓글 삭제 및 좋아요 기능 구현 추가

--- a/src/pages/najeongpark/Main/Main.scss
+++ b/src/pages/najeongpark/Main/Main.scss
@@ -108,6 +108,10 @@ article {
                 margin-left: 40px;
             }
 
+            .fa-solid {
+                color: red;
+            }
+
             .fa-solid:before {
                 margin-left: 40px;
             }
