--- a/src/pages/dayeonmun/Main/Main.scss
+++ b/src/pages/dayeonmun/Main/Main.scss
@@ -59,9 +59,9 @@ main {
             }
         }
 
-        .comment ul {
-            font-size: 15px;
-            list-style: none;
+        .comments li {
+            text-indent: -50px;
+            font-size: 13px;
             padding-left: 20px;
             margin: 5px 0px;
         }
@@ -70,7 +70,7 @@ main {
             color: #828282;
             padding-top: 8px;
             padding-bottom: 8px;
-            margin-left: 20px;
+            margin-left: 10px;
         }
         .commentList {
             display: flex;
