self Refactoring 완료

--- a/src/pages/najeongpark/Main/Main.scss
+++ b/src/pages/najeongpark/Main/Main.scss
@@ -285,6 +285,12 @@ aside {
             }
         }
     }
+
+    .asideBottom {
+        margin-top: 20px;
+        font-size: 15px;
+        color: #bdbaba;
+    }
 }
 
 @media screen and (max-width: 1000px) {
