Aside에서 상수데이터 활용 Footer 분리 구현

--- a/src/pages/chaeyoungkim/Main/Main.scss
+++ b/src/pages/chaeyoungkim/Main/Main.scss
@@ -370,13 +370,16 @@
   
   footer {
     width: 330px;
-  
-    .instaScript {
-    font-size: 12px;
-    padding-left: 12px;
-    margin-top: 20px;
-    color: #8e8e8e;
+
+      .westaScript{
+      font-size: 12px;
+      padding-left: 12px;
+      margin-top: 20px;
+      color: #8e8e8e;
+      display: flex;
+      flex-wrap: wrap;
+
+      }
     }
   
-  }
   
