Add: Mission4 - 댓글 컴포넌트화, Props로 데이터 전달 구현

--- a/src/pages/dayeonmun/Main/Main.scss
+++ b/src/pages/dayeonmun/Main/Main.scss
@@ -86,8 +86,17 @@ main {
                 padding-left: 20px;
                 background: transparent;
             }
-            button {
-                color: #aac9ff;
+
+            .activeBtn {
+                color: #0095f6;
+                font-weight: bold;
+                border: none;
+                margin-right: 20px;
+                background-color: white;
+            }
+
+            .unActiveBtn {
+                color: #c8e0fc;
                 font-weight: bold;
                 border: none;
                 margin-right: 20px;
