--- a/src/pages/dayeonmun/Main/Main.scss
+++ b/src/pages/dayeonmun/Main/Main.scss
@@ -245,23 +245,17 @@ main {
                 }
             }
         }
-        .copyright1 {
-            display: block;
+        .copyright {
             color: #828282;
             font-size: 10px;
-            margin-top: 25px;
-        }
-        .copyright2 {
-            display: block;
-            color: #828282;
-            font-size: 10px;
-            margin-top: 5px;
-        }
-        .copyright3 {
-            display: block;
-            color: #828282;
-            font-size: 10px;
-            margin-top: 25px;
+            margin-top: 10px;
+            ul {
+                padding-left: 10px;
+                
+                li {
+                    display: inline;
+                }
+            }
         }
     }
 }
